manifests/prd/victoria-metrics/HTTPRoute-vlsingle-victoria-metrics-victoria-metrics-k8s-stack.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/component: vlsingle
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/name: victoria-metrics-k8s-stack
  name: vlsingle-victoria-metrics-victoria-metrics-k8s-stack
  namespace: monitoring
spec:
  hostnames:
    - logs.kidibox.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: apps
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vlsingle-victoria-metrics-victoria-metrics-k8s-stack
          port: 9428
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
